# nix_rust_bluepill_base

./: .gitignore  Cargo.toml  flake.nix  openocd.cfg
src/: main.rs
